<resources>
    <string name="app_name">Clue-Less</string>
    <string name="green">Baron Green</string>
    <string name="blue">Lady Peacock</string>
    <string name="white">Madam White</string>
    <string name="red">Lady Scarlet</string>
    <string name="purple">Dr. Plum</string>
    <string name="yellow">General Mustard</string>
    <string name="characterSelectReady">Ready?</string>
    <string name="characterSelectBack">Back</string>
    <string name="title_activity_game_board">GameBoard</string>
    <string name="room1">Study</string>
    <string name="room2">Great Hall</string>
    <string name="room3">Lounge</string>
    <string name="room4">Library</string>
    <string name="room5">Billiard Room</string>
    <string name="room6">Dining Room</string>
    <string name="room7">Conservatory</string>
    <string name="room8">Ballroom</string>
    <string name="room9">Kitchen</string>
    <string name="finished">Finish</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="startOfGameMessage">A room, suspect, and weapon card have been placed inside the secret folder...</string>

    <string name="action_settings">Settings</string>
    <string-array name="suspects">
        <item>Baron Green</item>
        <item>Lady Peacock</item>
        <item>Madam White</item>
        <item>Lady Scarlet</item>
        <item>Dr. Plum</item>
        <item>General Mustard</item>
    </string-array>
    <string-array name="weapons">
        <item>Rope</item>
        <item>Lead Pipe</item>
        <item>Knife</item>
        <item>Wrench</item>
        <item>Candlestick</item>
        <item>Revolver</item>
    </string-array>
    <string-array name="rooms">
        <item>Study</item>
        <item>Great Hall</item>
        <item>Lounge</item>
        <item>Library</item>
        <item>Billiard Room</item>
        <item>Dining Room</item>
        <item>Conservatory</item>
        <item>Ballroom</item>
        <item>Kitchen</item>
    </string-array>
</resources>
