<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhu.fireflies.com.clue_less.LobbyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/characterSelectHeader"
        android:text="Select a Character"
        android:gravity="center"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@id/characterSelect"
        android:layout_marginBottom="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/startGame"
        android:text="Start Game!"
        android:gravity="center"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="@id/characterSelectHeader"
        android:visibility="invisible"/>
    <RadioGroup
        android:id="@+id/characterSelect"
        android:layout_width="350dp"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/green"
            android:background="@drawable/border_green"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/blue"
            android:textSize="25sp"
            android:background="@drawable/border_blue"/>

        <RadioButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/white"
            android:textSize="25sp"
            android:background="@drawable/border_white"/>
        <RadioButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/red"
            android:textSize="25sp"
            android:background="@drawable/border_red"/>
        <RadioButton
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/purple"
            android:textSize="25sp"
            android:background="@drawable/border_purple"/>
        <RadioButton
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/yellow"
            android:textSize="25sp"
            android:background="@drawable/border_yellow"/>

    </RadioGroup>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterSelect"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="@string/characterSelectReady"
        android:id="@+id/characterSelectButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="testNetwork"/>

</android.support.constraint.ConstraintLayout>
