<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/testboard"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jhu.fireflies.com.clue_less.GameBoard">
    <!--tools:showIn="@layout/game_board_layout"-->

    <!-- Defining game board -->
    <Button
        android:id="@+id/kitchen"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintRight_toRightOf="@+id/dining_room"
        app:layout_constraintLeft_toLeftOf="@+id/dining_room"
        app:layout_constraintTop_toBottomOf="@+id/hall10"
        android:enabled="false"/>

    <Button
        android:id="@+id/conservatory"
        android:layout_width="68dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintLeft_toLeftOf="@+id/library"
        app:layout_constraintRight_toRightOf="@+id/library"
        app:layout_constraintTop_toBottomOf="@+id/hall8"
        android:enabled="false"/>

    <Button
        android:id="@+id/great_hall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintBottom_toTopOf="@+id/hall4"
        app:layout_constraintLeft_toLeftOf="@+id/billiard_room"
        app:layout_constraintRight_toRightOf="@+id/billiard_room"
        android:enabled="false"/>

    <Button
        android:id="@+id/ballroom"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toBottomOf="@+id/hall9"
        app:layout_constraintLeft_toLeftOf="@id/billiard_room"
        app:layout_constraintRight_toRightOf="@id/billiard_room"
        android:enabled="false"/>

    <Button
        android:id="@+id/dining_room"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintLeft_toLeftOf="@id/lounge"
        app:layout_constraintRight_toRightOf="@id/lounge"
        app:layout_constraintTop_toTopOf="@id/billiard_room"
        android:enabled="false"/>

    <Button
        android:id="@+id/library"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintRight_toRightOf="@+id/study"
        app:layout_constraintLeft_toLeftOf="@+id/study"
        app:layout_constraintTop_toBottomOf="@+id/hall3"
        android:enabled="false"/>

    <Button
        android:id="@+id/billiard_room"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"/>

    <Button
        android:id="@+id/lounge"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toTopOf="@id/great_hall"
        app:layout_constraintBottom_toBottomOf="@id/great_hall"
        app:layout_constraintLeft_toRightOf="@+id/hall2"
        android:enabled="false"/>

    <Button
        android:id="@+id/study"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@android:color/darker_gray"
        android:onClick="onRoomClick"
        app:layout_constraintBottom_toBottomOf="@+id/great_hall"
        app:layout_constraintTop_toTopOf="@+id/great_hall"
        app:layout_constraintRight_toLeftOf="@+id/hall1"
        android:enabled="false"/>

    <Button
        android:id="@+id/hall1"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintRight_toLeftOf="@+id/great_hall"
        app:layout_constraintTop_toTopOf="@+id/great_hall"
        app:layout_constraintBottom_toBottomOf="@+id/great_hall"
        android:enabled="false" />

    <Button
        android:id="@+id/hall2"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintLeft_toRightOf="@+id/great_hall"
        app:layout_constraintTop_toTopOf="@+id/great_hall"
        app:layout_constraintBottom_toBottomOf="@+id/great_hall"
        android:enabled="false" />

    <Button
        android:id="@+id/hall3"
        android:layout_width="30dp"
        android:layout_height="74dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toBottomOf="@+id/study"
        app:layout_constraintLeft_toLeftOf="@+id/study"
        app:layout_constraintRight_toRightOf="@+id/study"
        android:enabled="false" />

    <Button
        android:id="@+id/hall4"
        android:layout_width="30dp"
        android:layout_height="74dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintBottom_toTopOf="@+id/billiard_room"
        app:layout_constraintLeft_toLeftOf="@+id/billiard_room"
        app:layout_constraintRight_toRightOf="@+id/billiard_room"
        android:enabled="false" />

    <Button
        android:id="@+id/hall5"
        android:layout_width="30dp"
        android:layout_height="74dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintRight_toRightOf="@id/lounge"
        app:layout_constraintLeft_toLeftOf="@+id/lounge"
        app:layout_constraintTop_toBottomOf="@+id/lounge"
        android:enabled="false" />

    <Button
        android:id="@+id/hall6"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintLeft_toRightOf="@+id/library"
        app:layout_constraintTop_toTopOf="@+id/library"
        app:layout_constraintBottom_toBottomOf="@+id/library"
        android:enabled="false" />

    <Button
        android:id="@+id/hall7"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintBottom_toBottomOf="@+id/billiard_room"
        app:layout_constraintTop_toTopOf="@+id/billiard_room"
        app:layout_constraintRight_toLeftOf="@+id/dining_room"
        android:enabled="false" />

    <Button
        android:id="@+id/hall8"
        android:layout_width="30dp"
        android:layout_height="74dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toBottomOf="@+id/library"
        app:layout_constraintRight_toRightOf="@+id/library"
        app:layout_constraintLeft_toLeftOf="@+id/library"
        android:enabled="false" />

    <Button
        android:id="@+id/hall9"
        android:layout_width="30dp"
        android:layout_height="74dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintLeft_toLeftOf="@id/billiard_room"
        app:layout_constraintRight_toRightOf="@id/billiard_room"
        app:layout_constraintTop_toBottomOf="@id/billiard_room"
        android:enabled="false" />

    <Button
        android:id="@+id/hall10"
        android:layout_width="30dp"
        android:layout_height="74dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toBottomOf="@id/dining_room"
        app:layout_constraintLeft_toLeftOf="@id/dining_room"
        app:layout_constraintRight_toRightOf="@id/dining_room"
        android:enabled="false" />

    <Button
        android:id="@+id/hall11"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toTopOf="@id/conservatory"
        app:layout_constraintBottom_toBottomOf="@id/conservatory"
        app:layout_constraintLeft_toRightOf="@id/conservatory"
        android:enabled="false" />

    <Button
        android:id="@+id/hall12"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:background="@android:color/black"
        android:onClick="onRoomClick"
        app:layout_constraintTop_toTopOf="@id/conservatory"
        app:layout_constraintBottom_toBottomOf="@id/conservatory"
        app:layout_constraintLeft_toRightOf="@id/ballroom"
        android:enabled="false" />

    <TextView
        android:id="@+id/textView1"
        android:text="@string/room1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/study"
        app:layout_constraintBottom_toBottomOf="@+id/study"
        app:layout_constraintLeft_toLeftOf="@+id/study"
        app:layout_constraintRight_toRightOf="@+id/study" />

    <TextView
        android:id="@+id/testView2"
        android:text="@string/room2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/great_hall"
        app:layout_constraintBottom_toBottomOf="@+id/great_hall"
        app:layout_constraintLeft_toLeftOf="@+id/great_hall"
        app:layout_constraintRight_toRightOf="@+id/great_hall"/>

    <TextView
        android:id="@+id/textView3"
        android:text="@string/room3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/lounge"
        app:layout_constraintBottom_toBottomOf="@+id/lounge"
        app:layout_constraintLeft_toLeftOf="@+id/lounge"
        app:layout_constraintRight_toRightOf="@+id/lounge" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/room4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/library"
        app:layout_constraintBottom_toBottomOf="@+id/library"
        app:layout_constraintLeft_toLeftOf="@+id/library"
        app:layout_constraintRight_toRightOf="@+id/library" />

    <TextView
        android:id="@+id/textView5"
        android:text="@string/room5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/billiard_room"
        app:layout_constraintBottom_toBottomOf="@+id/billiard_room"
        app:layout_constraintLeft_toLeftOf="@+id/billiard_room"
        app:layout_constraintRight_toRightOf="@+id/billiard_room"/>

    <TextView
        android:id="@+id/textView6"
        android:text="@string/room6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/dining_room"
        app:layout_constraintBottom_toBottomOf="@+id/dining_room"
        app:layout_constraintLeft_toLeftOf="@+id/dining_room"
        app:layout_constraintRight_toRightOf="@+id/dining_room" />

    <TextView
        android:id="@+id/textView7"
        android:text="@string/room7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/conservatory"
        app:layout_constraintBottom_toBottomOf="@+id/conservatory"
        app:layout_constraintLeft_toLeftOf="@+id/conservatory"
        app:layout_constraintRight_toRightOf="@+id/conservatory" />

    <TextView
        android:id="@+id/textView8"
        android:text="@string/room8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/ballroom"
        app:layout_constraintBottom_toBottomOf="@+id/ballroom"
        app:layout_constraintLeft_toLeftOf="@+id/ballroom"
        app:layout_constraintRight_toRightOf="@+id/ballroom"/>

    <TextView
        android:id="@+id/textView9"
        android:text="@string/room9"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:elevation="2dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/kitchen"
        app:layout_constraintBottom_toBottomOf="@+id/kitchen"
        app:layout_constraintLeft_toLeftOf="@+id/kitchen"
        app:layout_constraintRight_toRightOf="@+id/kitchen"/>

    <!-- Defining game characters -->

    <ImageView
        android:id="@+id/baron_green"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/green"
        android:elevation="2dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/lady_peacock"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/blue"
        android:elevation="2dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/madam_white"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="#f9f7f6"
        android:elevation="2dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/lady_scarlet"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/red"
        android:elevation="2dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/dr_plum"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/purple"
        android:elevation="2dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/general_mustard"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/yellow"
        android:elevation="2dp"
        android:visibility="visible" />

    <!-- Defining finish button-->
    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/finished"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/great_hall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
